--- a/docs/content/docs/core/config/custom-state.mdx
+++ b/docs/content/docs/core/config/custom-state.mdx
@@ -43,7 +43,7 @@ The values defined here will be set as the initial values for each state propert
 
 ## Using custom State
 
-In your [game implementation](/docs/core/game-flow), you will have access to the underlying state via the context.
+In your [game implementation](/docs/core/game-implementation), you will have access to the underlying state via the context.
 From there you can access your custom state.
 
 ```ts lineNumbers
