--- a/docs/content/docs/core/config/hooks.mdx
+++ b/docs/content/docs/core/config/hooks.mdx
@@ -21,7 +21,7 @@ These are the hooks you can define in your game configuration.
 | ------------------ | ---------------------------- | -------- |
 | `onHandleGameFlow` | `(ctx: GameContext) => void` | yes      |
 
-The complete game logic must be [implemented](/docs/core/game-flow) in this hook.
+The complete game logic must be [implemented](/docs/core/game-implementation) in this hook.
 
 ### onSimulationAccepted
 
