--- a/docs/content/docs/core/config/index.mdx
+++ b/docs/content/docs/core/config/index.mdx
@@ -96,7 +96,7 @@ You have now completed the basic game setup.
 Continue by configuring [symbols](/docs/core/config/symbols),
 [game modes](/docs/core/config/game-modes),and [state](/docs/core/config/custom-state).
 
-At the heart of your game lies the actual [implementation](/docs/core/game-flow).
+At the heart of your game lies the actual [implementation](/docs/core/game-implementation).
 
 Finally, [simulate](/docs/core/game-tasks/simulation) your game, tweak settings to improve the feel of it,
 and [optimize](/docs/core/game-tasks/optimization) results to achieve your desired RTP.
