fix: bugs and improve optimizer logging

--- a/docs/content/docs/core/game-implementation/index.mdx
+++ b/docs/content/docs/core/game-implementation/index.mdx
@@ -61,7 +61,7 @@ function drawBoard(ctx: Context) {
 
 ### ❌ Don't [!toc]
 
-#### Destroy reference to the context objcet [!toc]
+#### Destroy reference to the context object [!toc]
 
 Your simulations will not work as intended if you do this.
 
