fix: issue with root path

--- a/docs/content/docs/core/config/index.mdx
+++ b/docs/content/docs/core/config/index.mdx
@@ -103,16 +103,15 @@ and [optimize](/docs/core/game-tasks/optimization) results to achieve your desir
 
 ## createSlotGame() Options [#options]
 
-All options are required.
-
-| Property             | Type                                     | Description                                                                                                                                                                              |
-| -------------------- | ---------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `id`                 | `string`                                 | A unique identifier for your game.                                                                                                                                                       |
-| `name`               | `string`                                 | The name of your game.                                                                                                                                                                   |
-| `maxWinX`            | `number`                                 | The maximum bet multiplier payout. Wins exceeding this number will be capped.                                                                                                            |
-| `gameModes`          | `Record<string, GameMode>`               | See: [Game Configuration: Game Modes](/docs/core/config/game-modes)                                                                                                                      |
-| `symbols`            | `Record<string, GameSymbol>`             | See: [Game Configuration: Symbols](/docs/core/config/symbols)                                                                                                                            |
-| `padSymbols`         | `number`                                 | Amount of padding symbol rows above and below the active board.<br/>Used to display partially visible symbols in the frontend at the top and bottom of the board.<br/><br/>Defaults to 1 |
-| `scatterToFreespins` | `Record<string, Record<number, number>>` | A mapping from spin type to scatter counts to the number of free spins awarded.                                                                                                          |
-| `userState`          | `Record<string, any>`                    | See: [Game Configuration: User State](/docs/core/config/custom-state)                                                                                                                    |
-| `hooks`              | `Record<string, (ctx) => unknown>`       | See: [Game Configuration: Hooks](/docs/core/config/hooks)                                                                                                                                |
+| Property             | Type                                     | Description                                                                                                                                                                                                                             | Required |
+| -------------------- | ---------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- |
+| `id`                 | `string`                                 | A unique identifier for your game.                                                                                                                                                                                                      | yes      |
+| `name`               | `string`                                 | The name of your game.                                                                                                                                                                                                                  | yes      |
+| `maxWinX`            | `number`                                 | The maximum bet multiplier payout. Wins exceeding this number will be capped.                                                                                                                                                           | yes      |
+| `gameModes`          | `Record<string, GameMode>`               | See: [Game Configuration: Game Modes](/docs/core/config/game-modes)                                                                                                                                                                     | yes      |
+| `symbols`            | `Record<string, GameSymbol>`             | See: [Game Configuration: Symbols](/docs/core/config/symbols)                                                                                                                                                                           | yes      |
+| `padSymbols`         | `number`                                 | Amount of padding symbol rows above and below the active board.<br/>Used to display partially visible symbols in the frontend at the top and bottom of the board.<br/><br/>Defaults to 1                                                | yes      |
+| `scatterToFreespins` | `Record<string, Record<number, number>>` | A mapping from spin type to scatter counts to the number of free spins awarded.                                                                                                                                                         | yes      |
+| `userState`          | `Record<string, any>`                    | See: [Game Configuration: User State](/docs/core/config/custom-state)                                                                                                                                                                   | yes      |
+| `hooks`              | `Record<string, (ctx) => unknown>`       | See: [Game Configuration: Hooks](/docs/core/config/hooks)                                                                                                                                                                               | yes      |
+| `rootDir`            | `string`                                 | Normally you would `cd` into the game directory and run it from there. If you run your game from a different file or `process.cwd()` is not where your game lies, specify this option and provide a path. `__dirname` should work fine. |
