--- a/docs/content/docs/core/game-context/data-service.mdx
+++ b/docs/content/docs/core/game-context/data-service.mdx
@@ -84,7 +84,7 @@ You can add additional records as needed using `record()`.
 | --------- | --------------------------------------------- |
 | `event`   | `{ type: string, data: Record<string, any> }` |
 
-A wrapper around `ctx.services.data.record()` to record symbol occurrences.
+Adds a new event to the current book.
 
 ### record()
 
