--- a/docs/content/docs/core/game-context/state.mdx
+++ b/docs/content/docs/core/game-context/state.mdx
@@ -19,14 +19,14 @@ Wrong usage can break simulations!
 
 ## Properties
 
-| Property                | Type                  | Description                                                                                                        |
-| ----------------------- | --------------------- | ------------------------------------------------------------------------------------------------------------------ |
-| `currentGameMode`       | `string`              | The name of the currently simulated game mode.                                                                     |
-| `currentSpinType`       | `string`              | As defined under `SPIN_TYPE`.                                                                                      |
-| `currentResultSet`      | `ResultSet`           | The current result set. Useful to conditionally do things to achieve certain outcomes.                             |
-| `isCriteriaMet`         | `boolean`             | **Serves internal purposes only. Do not modify!**                                                                  |
-| `currentFreespinAmount` | `number`              | Stores the number of remaining free spins. Increased using `awardFreespins()` from game service. Reduce manually.  |
-| `totalFreespinAmount`   | `number`              | Stores the number of total awarded free spins. Increased using `awardFreespins()` from game service. Don't reduce. |
-| `triggeredFreespins`    | `boolean`             | Whether free spins were triggered. Set using `awardFreespins()` from game service.                                 |
-| `triggeredMaxWin`       | `boolean`             | Whether a max win was triggered. Set automatically at the end of a simulation.                                     |
-| `userData`              | `Record<string, any>` | Custom user state as defined in the game config. Do with it what you want.                                         |
+| Property                | Type                  | Description                                                                                                                                  |
+| ----------------------- | --------------------- | -------------------------------------------------------------------------------------------------------------------------------------------- |
+| `currentGameMode`       | `string`              | The name of the currently simulated game mode.<br/>**Serves internal purposes only. Do not modify!**                                         |
+| `currentSpinType`       | `string`              | As defined under `SPIN_TYPE`.                                                                                                                |
+| `currentResultSet`      | `ResultSet`           | The current result set. Useful to conditionally do things to achieve certain outcomes.<br/>**Serves internal purposes only. Do not modify!** |
+| `isCriteriaMet`         | `boolean`             | **Serves internal purposes only. Do not modify!**                                                                                            |
+| `currentFreespinAmount` | `number`              | Stores the number of remaining free spins. Increased using `awardFreespins()` from game service. Reduce manually.                            |
+| `totalFreespinAmount`   | `number`              | Stores the number of total awarded free spins. Increased using `awardFreespins()` from game service. Don't reduce.                           |
+| `triggeredFreespins`    | `boolean`             | Whether free spins were triggered. Set using `awardFreespins()` from game service.                                                           |
+| `triggeredMaxWin`       | `boolean`             | Whether a max win was triggered. Set automatically at the end of a simulation.                                                               |
+| `userData`              | `Record<string, any>` | Custom user state as defined in the game config. Do with it what you want.                                                                   |
