--- a/docs/content/docs/core/game-context/board-service.mdx
+++ b/docs/content/docs/core/game-context/board-service.mdx
@@ -293,6 +293,11 @@ Draws a board using random reel stops.
 
 Tumbles the board. All given symbols will be deleted and new symbols will fall from the top.
 
+If you use the symbols from `winCombinations` returned by a win type, ensure symbols are deduped
+to prevent bugs during tumbling. For example, the same Wild symbol may be associated with multiple
+win combinations. To dedupe, use `ctx.services.game.dedupeWinSymbols()`.
+The resulting symbol positions are safe to use for tumbling.
+
 The function returns the new symbols that were added to each reel.
 For example, `newBoardSymbols` will be an object where the keys are the reel indexes
 and the values are the added symbols for that reel.
