--- a/docs/content/docs/core/game-context/board-service.mdx
+++ b/docs/content/docs/core/game-context/board-service.mdx
@@ -351,6 +351,8 @@ and the values are the added symbols for that reel.
 
 <Callout type="warn">
 This method is experimental and may be changed or replaced in the future.
+If you plan to use this method, ensure `padSymbols` is set to `0` in the game config
+or you will most likely experience bugs or unexpected behavior.
 </Callout>
 
 | Method                                      | Type                                                  |
