docs: prepare for panel

--- a/docs/content/docs/core/config/reel-sets.mdx
+++ b/docs/content/docs/core/config/reel-sets.mdx
@@ -262,3 +262,11 @@ export const gameModes = defineGameModes({
   }),
 })
 ```
+
+## FAQ / Common Issues
+
+<Accordions>
+  <Accordion title="The GeneratedReelSet fails to generate or throws an error">
+    Setting a different seed may help with generating reels.
+  </Accordion>
+</Accordions>
