feat(panel): wip

--- a/docs/content/docs/core/game-context/data-service.mdx
+++ b/docs/content/docs/core/game-context/data-service.mdx
@@ -70,6 +70,8 @@ Records are written to the `__build__` directory as `force_record_<gameMode>.jso
 Without having to configure anything, Slot Engine automatically groups simulations by their result set criteria.
 You can add additional records as needed using `record()`.
 
+Records are also used to enable filtering books when browsing them with [Panel](/docs/panel).
+
 ## Methods
 
 ### addBookEvent()
