docs: add panel docs

--- a/docs/content/docs/core/game-context/data-service.mdx
+++ b/docs/content/docs/core/game-context/data-service.mdx
@@ -74,6 +74,14 @@ Records are also used to enable filtering books when browsing them with [Panel](
 
 ## Methods
 
+### log()
+
+| Method                             | Type              |
+| ---------------------------------- | ----------------- |
+| `ctx.services.data.log()` | `(message: string) => void` |
+
+Write a log to the terminal UI. **This is more reliable than `console.log`.**
+
 ### addBookEvent()
 
 | Method                             | Type              |
