docs: finishing touches

--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -17,7 +17,7 @@ Slot Engine is a family of TypeScript libraries for building, simulating and tes
   <Card icon={<LayoutDashboard className="text-fd-primary" />} title='Slot Engine Panel'>
   Web GUI for interacting with Slot Engine. Run simulations, view statistics, explore game files.
   </Card>
-  <Card icon={<Server className="text-fd-primary" />} title='Slot Engine LGS'>
+  <Card icon={<Server className="text-fd-primary" />} title='Slot Engine LGS (WIP)'>
   Local gaming server. Test your game locally without the need to upload to Stake Engine and save time during development.
   </Card>
 </Cards>
