--- a/docs/content/docs/panel/index.mdx
+++ b/docs/content/docs/panel/index.mdx
@@ -79,6 +79,7 @@ Set up Panel using the `@slot-engine/panel` library.
       // ...
     })
     ```
+    Furthermore, if you want to use the reel set designer, your reels CSV files must be prefixed with `reels_`.
   </Step>
   <Step>
     ### Run Panel
