--- a/docs/content/docs/panel/modules/reelset-designer.mdx
+++ b/docs/content/docs/panel/modules/reelset-designer.mdx
@@ -22,4 +22,4 @@ Those files will be available for editing in the UI.
 
 Currently you can not create new CSV files via the UI. This feature will be added in a future update.
 
-For now, create a new CSV file named `reels_*.csv` somewhere in your game directory.
+For now, create a new CSV file named `reels_<some-name>.csv` somewhere in your game directory.
